<resources>
    <string name="app_name">斧头便签</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 临时 -->
    <string name="jay">周杰伦</string>
    <string name="aiyo">哎哟，不错哦！</string>

    <!-- 侧边栏 -->
    <string name="settings">设置</string>
    <string name="last_sync">上次同步</string>
    <string name="theme">主题</string>
    <string name="user_message">用户信息</string>

    <string name="about">关于</string>
    <string name="version">版本号</string>
    <string name="about_author">关于作者</string>


    <string name="action_settings">设置</string>

    <!-- 版本号 -->
    <string name="version_number">版本号：beta1.0</string>
    <string name="check_update">检查更新</string>

    <!-- 关于作者 -->
    <string name="author_name">许宏川</string>
    <string name="motto">其疾如风，其徐如林，侵略如火，不动如山。</string>
    <string name="jianshu">简书：@许宏川</string>
    <string name="weibo">微博：@许宏川</string>
    <string name="weixin">微信：xuhongchuan-uht</string>
    <string name="mail">邮箱：life.xhc@gmail.com</string>

    <!-- 用户信息 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="mobile_phone_number">手机号:</string>
    <string name="password_space">密&#160;&#160;&#160;&#160;码:</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>

    <!-- 注册 -->
    <!--
用户名必须为2到8个字符
用户名已经存在
密码长度必须为6到16位
注册成功
密码只能由数字和字母组成
    -->

    <!-- 其它 -->
    <string name="choice_theme">选择主题</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="get_img_failed">获取图片失败</string>

    <string name="app_description">一个简洁的便签</string>
</resources>
