<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_theme"
                    android:icon="@drawable/ic_theme_night"
                    android:title="@string/theme" />

                <item
                    android:id="@+id/nav_user_info"
                    android:icon="@drawable/ic_user_info_night"
                    android:title="@string/user_message" />
            </group>
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/ic_version_night"
                android:title="@string/version" />
            <item
                android:id="@+id/nav_about_author"
                android:icon="@drawable/ic_about_author_night"
                android:title="@string/about_author" />
        </menu>
    </item>

</menu>